--- a/photos_videos.html
+++ b/photos_videos.html
@@ -61,31 +61,31 @@
                         <area href="#img1map-area1" shape="rect" coords="100,100,200,200" />
                         <area href="#img1map-area2" shape="rect" coords="300,100,400,200" />
                     </map>
-                    <div class="SliderName_2Description">Actors: <strong>TJ, RJ</strong></div>
+                    <div class="SliderName_2Description"><strong>Actors: </strong> Sam Bo as RJ, Kirk Benttinen as TJ</div>
 
                     <img src="images/group_photo.jpg" width="700" height="450" alt="Demo2 second" title="Demo2 second" />
-                    <div class="SliderName_2Description">Show Cast: <strong>Love Junkies</strong></div>
+                    <div class="SliderName_2Description"><strong>Show Cast:</strong> Love Junkies</div>
 
                     <img src="images/Ramada&Sonya.jpg" width="700" height="450" alt="Demo2 third" title="Demo2 third" />
-                    <div class="SliderName_2Description">Principal Dancers: <strong>Brioso, Bellissima</strong></div>
+                    <div class="SliderName_2Description"><strong>Principal Dancers:</strong> Ramada Salieri as Brioso, Sonya Nagaslaeva as Bellissima</div>
 
                     <img src="images/leo_alona_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Featured Dancers: <strong>Fernando & Mirella</strong></div>
+                    <div class="SliderName_2Description"><strong>Featured Dancers:</strong> Leo Landa as Fernando & Alona Gorer as Mirella</div>
 
                     <img src="images/omar_ariela_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
+                    <div class="SliderName_2Description"><strong>Actors:</strong> Count Glover as Omar & Lisette Perelle as Ariela</div>
 
                     <img src="images/tj_rj_gio.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Actors: <strong>TJ, Gio, RJ</strong></div>
+                    <div class="SliderName_2Description"><strong>Actors:</strong> Sam Bo as RJ, Tiziana Perinotti as Gio, Kirk Benttinen as TJ</div>
 
                     <img src="images/omar_ariela_2_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Actors: <strong>Omar & Ariela</strong></div>
+                    <div class="SliderName_2Description"><strong>Actors:</strong> Count Glover as Omar & Lisette Perelle as Ariela</div>
 
                     <img src="images/leo_alona_2_black.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Featured Dancers: <strong>Fernando & Mirella</strong></div>
+                    <div class="SliderName_2Description"><strong>Featured Dancers:</strong> Leo Landa as Fernando & Alona Gorer as Mirella</div>
 
                     <img src="images/brio_bellissima.jpg" width="700" height="450" alt="Demo2 third" title="Demo2 third" />
-                    <div class="SliderName_2Description">Principal Dancers: <strong>Brioso, Bellissima</strong></div>
+                    <div class="SliderName_2Description"><strong>Principal Dancers:</strong> Ramada Salieri as Brioso, Sonya Nagaslaeva as Bellissima</div>
 
                 </div>
                 <div class="c"></div>
