--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     <div class = "main_page_content">
    <!--    <p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p> -->
-      <img src="images/poster.jpg"/  alt="Love Junkies Cast" title="Love Junkies Cast">
-      <div class="poster_credit">Poster by: Tiziana Perinotti</div>
+      <img src="images/new_poster.jpg"/  alt="Love Junkies Cast" title="Love Junkies Cast">
+      <div class="poster_credit">Poster by: Pierre Granier</div>
     </div>
 
     <span style="font-size: 12px">
