--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <div class="poster_credit">Poster by: Pierre Granier</div>
     </div>
 
-    <span style="font-size: 12px">
-    LOVE JUNKIES BY TIZIANA PERINOTTI - COPYRIGHT 2013 <br/>
-    WGA Registration Number: 1704944
+    <span style="font-size: 12px; float: right;">
+    LOVE JUNKIES BY TIZIANA PERINOTTI - COPYRIGHT 2013 </span><br/>
+    <span style="font-size: 12px; float: right">WGA Registration Number: 1704944
     </span>
 
 
