--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </p>
     </div>
 
+
     <div class = "main_page_content">
    <!--    <p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p> -->
       <img src="images/new_poster.jpg"/  alt="Love Junkies Cast" title="Love Junkies Cast">
@@ -58,6 +59,17 @@
     LOVE JUNKIES BY TIZIANA PERINOTTI - COPYRIGHT 2013 </span><br/>
     <span style="font-size: 12px; float: right">WGA Registration Number: 1704944
     </span>
+
+
+    <div class="eventbrite">
+      Opening at A.C.T.<br/>
+      Costume Shop Theater<br/>
+      1117 Market St. SF<br/><br/>
+      October 3~5, 2014<br/>
+      Show time: 8 pm<br/><br/>
+      Tickets at:<br/>
+      <a href="http://lovejunkiesthemusical.eventbrite.com">LoveJunkiesTheMusical.EventBrite.com</a>
+    </div>
 
 
 
