--- a/about.html
+++ b/about.html
@@ -39,19 +39,35 @@
 
   <div class="content">
     <div class="about_the_show">
-      <h2>Love Junkies The Musical</h2>
-      <h3>Premiering at the American Conservatory Theater A.C.T.</h3>
-      <h4>Costume Shop Theater in San Francisco</h4>
-      <span style="color: #CC0033"><h4>October 3-5th, 2014</h4></span>
-  <!--     <span style="color: #CC0033">From the creator of the award-winning "T4Tango"</span><br/> -->
-<br/>
-      <p>Love Junkies is a broadway style original musical celebrating Love in many of its aspects, playful, romantic, intimate, erotic, seductive, fatherly, friendly, committed, uncommitted.</p> 
+      <div class="fon">
+        <span style="color: #B22222"><h2>Love Junkies The Musical</h2></span>
+        <h3>Written and directed by Tiziana Perinotti (also playing "Gio")</h3>
+        <h4>Music by Ramada Salieri, Tiziana Perinotti</h4>
 
-      <p>Love Junkies characters crave it, chase it, discover it, cope with the lack or loss of it in their own way, some are able to channel it into love for something else.</p> 
+  <br/>
+        <p>Meet the Love Junkies : <em style="color: #B22222">Ariela</em> the Diva, <em style="color: #B22222">Omar</em> the King of Tango at the end of his career, <em style="color: #B22222">Robert</em>, the Silicon Valley Lawyer with a secret, <em style="color: #B22222">Danilo</em>, the "Mama's Boy" from Italy, <em style="color: #B22222">Gio</em> the Dreamer, <em style="color: #B22222">TJ</em> and <em style="color: #B22222">R.J.</em>, two San Francisco Hipsters: one a "Buffon" and the other wanting to be the "Perfect Son", and the Diva's entourage : <em style="color: #B22222">Bellissima</em>, the exquisite "Principal Dancer" with her <em style="color: #B22222">Brioso</em>, the talented "Musician and Principal Dancer", and <em style="color: #B22222">Fernando</em>, the "Bartender and Dancer" with plenty of attitude, and a soft spot for her Dance companion <em style="color: #B22222">Mirella</em>, a true "fashionista".</p><p>
 
-      <p>Loss and tragedy spin the Love Junkies into their "dark night of the soul" experience that allows them to get in touch with their shadow parts, and also bring up a sense of compassion for themselves and others, even in unexpected moments and circumstances.</p> 
 
-      <p>The Love as Life Force wants to live and move forwards even in Love Junkies.</p>
+        Love Junkies is a Broadway style original musical celebrating Love in many of its aspects, playful, romantic, intimate, erotic, seductive, fatherly, friendly, committed, uncommitted.</p><p>
+
+
+
+        Love Junkies characters crave it, chase it, discover it, cope with the lack or loss of it in their own way, some are able to channel it into love for something else.</p><p>
+
+
+
+        Loss and tragedy spin the Love Junkies into their "dark night of the soul" experience that allows them to get in touch with their shadow parts, and also bring up a sense of compassion for themselves and others, even in unexpected moments and circumstances.</p><p>
+
+
+
+        The Love as Life Force wants to live and move forwards even in Love Junkies.</p><p>
+
+
+
+        Come Join The Love Fun Fest!
+
+        </p>
+      </div>
     </div>
 
     <div class="credits">
