--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="description" content="Love Junkies the musical is a San Francisco broadway-style musical about love and tango"/>
+  <meta name="keywords" content="love, tango, San Francisco, musical, stage, milonga, Tiziana Perinotti, Sonya Nagaslaeva, performance, theater, Bay Area performances, Bay Area theater"/>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
   <link rel="shortcut icon" href="images/theater.ico">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
@@ -51,7 +53,7 @@
 
     <div class = "main_page_content">
    <!--    <p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p> -->
-      <img src="images/new_poster.jpg"/  alt="Love Junkies Cast" title="Love Junkies Cast">
+      <img src="images/new_poster.jpg"/  alt="Love Junkies the Musical" title="Love Junkies the Musical">
       <div class="poster_credit">Poster by: Pierre Granier</div>
     </div>
 
