--- a/cast.html
+++ b/cast.html
@@ -91,17 +91,6 @@ Presently she is Directing and shooting her own documentary on Tango.</p>
   </div>
   </div>
 
-<!--             <div class="cms-repeat" id="bio-popup-outer3">
-  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
-  <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="images/robert.jpg" alt="" /></div>
-  <div class="bio"><span id="name3" class="cms-editable name">MONTGOMERY PAULSEN</span> <span id="role3" class="cms-editable role">(Robert) - <em>the Lawyer and His Secret</em></span>
-  <p id="biotext3" class="cms-editable biotext">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
-  </div>
-  <div style="clear: both;">&nbsp;</div>
-  </div>
-  </div>
-  </div> -->
 
 
   <div class="cms-repeat" id="bio-popup-outer3">
@@ -110,6 +99,19 @@ Presently she is Directing and shooting her own documentary on Tango.</p>
   <div class="pic"><img id="pic3" class="cms-editable" src="images/heren.jpg" alt="Heren Patel" title="Heren Patel"/></div>
   <div class="bio"><span id="name3" class="cms-editable name">HEREN PATEL</span> <span id="role3" class="cms-editable role">(Danilo) - <em>Mama's Boy</em></span>
   <p id="biotext3" class="cms-editable biotext">Heren Patel - a recent graduate of the San Francisco State University's Theatre Arts Program, is acting in his first professional production in the Bay Area with Love Junkies the Musical. His new found love for theatre has driven him to new heights, such as acting, directing, singing, and dancing. He was inspired to do so through his love for Bollywood movies. His acting works include: Seminar, Gruesome Playground Injuries, and Evening Primrose, under SF State's celebrated Brown Bag Theatre, and has also been a part of new works in SF State's Fringe Festival. In 2013, Heren also had the grand opportunity to work for New Musical Theater of San Francisco's premiere of Chance: The Musical, where he assistant directed under legendary Broadway and Off-Broadway director; Robert Kalfin. He says that he found his second family when working for New Musical Theater of San Francisco, and will never forget to mention that. Currently, Heren serves Theatre Bay Area, the largest theatre services organization in the Bay, as an intern, and has been loving it so far. Heren will also be assuming the role of Amitabha in Enacte's production of Merchant On Venice in the middle of November of this year. In the future, Heren hopes to aspire to his childhood dream of becoming a Bollywood actor by moving to Mumbai, and hopefully making more friends. Heren would like to congratulate and give thanks to the entire team of Love Junkies the Musical for giving him such a superb and wonderful experience.</p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+              <div class="cms-repeat" id="bio-popup-outer3">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/robert.jpg" alt="" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">MONTGOMERY PAULSEN</span> <span id="role3" class="cms-editable role">(Robert) - <em>the Lawyer and His Secret</em></span>
+  <p id="biotext3" class="cms-editable biotext">Monty's theater roles include 3 separate revivals of the Bay Area favorite, Nina And The Monsters, multiple appearances at The Fringe of Marin and the San Francisco Theater Festival, a two year run in "Point Break Live", the role of "the Dude" in The Big Lebowski LIVE, and Bottom in Midsummer Night's Dream. His film credits include roles in Funny People, My Name is Kahn, The Violent Kind, Fruitvale Station and Bottle Shock. Television credits include Trauma and Parenthood, as well as multiple episodes on the Discovery Channel's Extreme Forensics and I Faked My Own Death. He has studied with many acting schools in the Bay Area, including A.C.T., Berkeley Rep, BATS Improv and The Jean Shelton Actors Lab. When he is not acting, Monty is active as a <em>Napa Valley winemaker, providing many locals theaters and non-profits with house wines and in-kind donations.</em></p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
