--- a/photos_videos.html
+++ b/photos_videos.html
@@ -56,11 +56,14 @@
             <div id="slider_container_2">
 
                 <div id="SliderName_2" class="SliderName_2">
-                    <img src="images/tj_rj.jpg" width="700" height="450" alt="Demo2 first" title="Demo2 first" usemap="#img1map" />
+                    <img src="images/heren_3.jpg" width="700" height="450" alt="Demo2 first" title="Demo2 first" usemap="#img1map" />
                     <map name="img1map">
                         <area href="#img1map-area1" shape="rect" coords="100,100,200,200" />
                         <area href="#img1map-area2" shape="rect" coords="300,100,400,200" />
                     </map>
+                    <div class="SliderName_2Description"><strong>Actors: </strong> Heren Patel as Danilo, Lisette Perelle as Ariela, Ramada Salieri as Brioso</div>
+
+                    <img src="images/tj_rj.jpg" width="700" height="450" alt="Demo2 second" title="Demo2 second" />
                     <div class="SliderName_2Description"><strong>Actors: </strong> Sam Bo as RJ, Kirk Benttinen as TJ</div>
 
                     <img src="images/group_photo.jpg" width="700" height="450" alt="Demo2 second" title="Demo2 second" />
