--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
 
     <div class="eventbrite">
-      Opening at A.C.T.<br/>
-      Costume Shop Theater<br/>
-      1117 Market St. SF<br/><br/>
-      October 3~5, 2014<br/>
-      Show time: 8 pm<br/><br/>
-      Tickets at:<br/>
-      <a href="http://lovejunkiesthemusical.eventbrite.com">LoveJunkiesTheMusical.EventBrite.com</a>
+      Just finished our successful premier <br/>
+      of Love Junkies the musical<br/>
+      with 3 consecutive sold out shows<br/>
+      at the American Conservatory Theater<br/>
+      in San Francisco.<br/>
+ <!--      Tickets at:<br/>
+      <a href="http://lovejunkiesthemusical.eventbrite.com">LoveJunkiesTheMusical.EventBrite.com</a> -->
     </div>
 
 
