update index page

--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
     <div class="tiziana"><img src="images/Tiziana.jpg" height="90"></div>
 
     <div class="main_text">
-      <p>
+      <!-- <p>
         11 intriguing "Love Addicts" with different backgrounds and aspirations, at different phases in life, meet by chance in San Francisco and get transformed by their fascination for the world of Tango. Seductive dance, fashion, passion, love triangles, intrigues. Sex In The City meets Dirty Dancing. 
+      </p> -->
+      <p>
+        Just finished our successful premier of Love Junkies the musical with 3 consecutive sold out shows at the American Conservatory Theater in San Francisco.
       </p>
     </div>
 
@@ -64,11 +67,11 @@
 
 
     <div class="eventbrite">
-      Just finished our successful premier <br/>
+<!--       Just finished our successful premier <br/>
       of Love Junkies the musical<br/>
       with 3 consecutive sold out shows<br/>
       at the American Conservatory Theater<br/>
-      in San Francisco.<br/>
+      in San Francisco.<br/> -->
  <!--      Tickets at:<br/>
       <a href="http://lovejunkiesthemusical.eventbrite.com">LoveJunkiesTheMusical.EventBrite.com</a> -->
     </div>
