--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 
 
     <div class="eventbrite">
+      <p><i>"The story is really good, the dance scenes were terrific, and the acting was very believable. Congrats all around! It was an amazing, comedic, and light-hearted way to approach such a heavy subject, Love."</i> -Pierre Garnier, Graphic Designer, San Francisco</p>
+      <p><i>"It was really beautifully executed...so proud of you and the whole cast"</i> -Jaime Soltys, actor, musician</p>
+      <p><i>"You inspire all of us!!"</i> -Lauren LeBeouff, actress</p>
+      <p><i>"It was a pleasure to be at A.C.T. and watch Love Junkies The Musical. Thank you for one-of-kind full of passion performance."</i> -Iryna Khorkova</p>
 <!--       Just finished our successful premier <br/>
       of Love Junkies the musical<br/>
       with 3 consecutive sold out shows<br/>
