added portfolio links

--- a/cast.html
+++ b/cast.html
@@ -74,6 +74,11 @@
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic3" class="cms-editable" src="images/lisette.jpg" alt="Lisette Perelle" title="Lisette Perelle"/></div>
   <div class="bio"><span id="name3" class="cms-editable name">LISETTE PERELLE</span> <span id="role3" class="cms-editable role">(Ariela) - <em>the Diva</em></span>
+    <div class="bio_link">
+      <a href="http://www.lisetteperelle.com" target="_blank">
+        www.LisettePerelle.com.com
+      </a>
+    <div>
   <p id="biotext3" class="cms-editable biotext">Dancing since the age of 5, Lisette began her training in gymnastics and continued her education in Hula, Ballet, Jazz, Modern, Ballroom, Theater and finally Argentine Tango where she feels that she found her home.</p><p>
 She received her B.A. degree in Speech Communications with a concentration in film and television production with her minor in Theater from Northeastern University in Boston.</p><p>
 Lisette has worked in the Film industry since 1991 and was a Lotus Award Winning Producer for Best PSA while she lived in Canada. 
@@ -84,7 +89,7 @@ She has trained U.S.A. Argentine Tango Champions and was a finalist herself in 2
  Lisette teaches and performs all around the Bay Area and the United States as well as in Buenos Aires, Argentina.</p><p>
 An elegant dancer and patient teacher, her focus is on the techniques necessary for smooth, powerful and beautiful dancing.</p><p>
 Presently she is Directing and shooting her own documentary on Tango.</p>
-<a href="http://lisetteperelle.com" target="_blank">WWW.LISETTEPERELLE.COM</a>
+
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
@@ -124,15 +129,22 @@ Presently she is Directing and shooting her own documentary on Tango.</p>
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic3" class="cms-editable" src="images/kirk.jpg" alt="Kirk Benttinen" /></div>
   <div class="bio"><span id="name3" class="cms-editable name">KIRK BENTTINEN</span> <span id="role3" class="cms-editable role">(TJ) - <em>the Buffon</em></span>
+    <div class="bio_link">
+      <a href="http://www.kirkbenttinen.com" target="_blank">
+        www.KirkBenttinen.com
+      </a>
+      <p>
+      <a href="http://www.theholyscoundrel.tumblr.com" target="_blank">
+        www.theholyscoundrel.tumblr.com
+      </a></p>
+    <div>
   <p id="biotext3" class="cms-editable biotext">Kirk Benttinen is an Oakland based artist and musician. He studied drum performance and musical composition at the University of Rhode Island and later at Manhattan’s Collective School of Music.</p><p> 
 
   He now explores many creative pursuits including writing, video, installation art, audio installations, performance art, drumming, record producing, songwriting, stand-up comedy and acting. He is also a music educator.</p><p>
 
   Some of his major recent accomplishments have been large trans-media art projects he calls Phenomena. Phenomena use a number of mediums to engage participants in surprise artistic experiences that aim to provide lasting inspiration.</p><p> 
 
-  Love Junkies is his acting debut.</p><p>
-
-  You can learn more about what he does at <a href="http://www.kirkbenttinen.com" target="_blank">www.kirkbenttinen.com</a> or <a href="http://www.theholyscoundrel.tumblr.com" target="_blank">www.theholyscoundrel.tumblr.com</a>.</p>
+  Love Junkies is his acting debut.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
@@ -174,6 +186,11 @@ Presently she is Directing and shooting her own documentary on Tango.</p>
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic4" class="cms-editable" src="images/Sonya.jpg" alt="Sonya Nagaslaeva" title="Sonya Nagaslaeva"/></div>
   <div class="bio"><span id="name4" class="cms-editable name">SONYA NAGASLAEVA</span> <span id="role4" class="cms-editable role">(Bellissima) - <em>Principal Dancer</em></span>
+    <div class="bio_link">
+      <a href="http://www.nsof.co" target="_blank">
+        www.nsof.co
+      </a>
+    <div>
   <p id="biotext4" class="cms-editable biotext">Originally from Russia, Sonya (Sofya) Nagaslaeva began dance lessons in early childhood. She chafed under traditional ballet style and explored other types of self-expression in art, such as contemporary dance, pop, ballroom and contact improvisation. In 2002 she joined the Musical Theater of V.D. Stefaniev where she performed as a dancer and actress, played several leading roles and got her first experience as a choreographer. In 2007, she moved to the US and in 2008 she was introduced to Argentine Tango. Tango became her biggest passion in life. Sonya trained in Chicago and eventually went to live in Buenos Aires to learn from the greatest maestros of the world.</p>
   <em>Photo by: Gary Draluck</em>
   </div>
@@ -189,6 +206,11 @@ Presently she is Directing and shooting her own documentary on Tango.</p>
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic4" class="cms-editable" src="images/Alona.jpg" alt="Alona Gorer" /></div>
   <div class="bio"><span id="name4" class="cms-editable name">ALONA GORER</span> <span id="role4" class="cms-editable role">(Mirella) - <em>Featured Dancer</em></span>
+  <div class="bio_link">
+    <a href="http://www.AlonaGorerTango.com" target="_blank">
+      www.AlonaGorerTango.com
+    </a>
+  <div>
   <p id="biotext4" class="cms-editable biotext">Alona Gorer started to dance at the age of 12. She fell in love with
       tango after seeing the “Forever Tango” show in New York City. While
       Alona has dabbled in all flavors of the dance, her preferred styles
@@ -214,6 +236,11 @@ Presently she is Directing and shooting her own documentary on Tango.</p>
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic4" class="cms-editable" src="images/Leo.jpg" alt="Leo Landa" /></div>
   <div class="bio"><span id="name4" class="cms-editable name">LEO LANDA</span> <span id="role4" class="cms-editable role">(Fernando) - <em>Featured Dancer, Bartender</em></span>
+    <div class="bio_link">
+      <a href="http://www.LeoLandaTango.com" target="_blank">
+        www.LeoLandaTango.com
+      </a>
+    <div>
   <p id="biotext4" class="cms-editable biotext">Leo Landa had an intense interest in tango music of all kinds since
       before he can remember. Upon encountering the dance of Argentine
       tango, he became a devoted student of the art, quickly turning into an
